Fri Mar 27 13:46:56 1998    <weis@snoopy.rz.uni-frankfurt.de>

	* kioslave/http.cpp (ProcessHeader): Fixed bug that
	  appeard with the following line:
	  "Content-Type: text/html; charset=..."

Thu Mar 26 02:40:24 1998  Torben Weis  <weis@localhost>

	* kioslave: Fixed bug that appeard while copying very
	  large files ( >40MB ). Now the progress indicator
	  works as expected.
	
	* kbind.cpp (runBinding): Fixes for %m and %i and %c

	* Added support for middle mouse button. It opens
	  a new window now if that makes sense or acts like
	  the lft mouse button otherwise ( almost ).

Sat Mar 21 17:18:13 1998  Torben Weis  <weis@localhost>

	* kfmgui.cpp (slotShowHistory): KFM can display its history
	  information using the HTML Widget.

	* kfm.cpp (addToHistory): KFM remembers the history
	  of all visited URLs.
	  (saveHTMLHistory): KFM can now save its history
	  to a HTML file.

	* kfmview.cpp (URLVisited): KFM display visited URLs
	  with another color now.

	* KFM remebers the position of the scrollbars again.
	  ( perhaps not everywhere ? )
	
Sat Mar 21 09:21:34 1998  Martin Jones  <mjones@kde.org>

	* Added link overlay to icons.

Fri Mar 13 21:42:15 1998  Stephan Kulow  <coolo@kde.org>

	* kfmpaths.cpp: don't write the config paths back. I wrote this
	once, but I think, adding them them to the default configuration
	taken $HOME is much better I think. (I struggeled about this some
	times myself working in a network)

1998-03-13  Stephan Kulow  <coolo@kde.org>

	* kfmview.cpp: fixed a encoding bug for the trash folder.
	(patch by Marcin Dalecki <dalecki@cyber.cs.net.pl>)

Sun Mar  8 13:23:00 1998  Jacek Konieczny  <jajcus@zeus.polsl.gliwice.pl>

	* Added charset mime type parameter support.

Sat Mar  7 12:44:10 1998  Stephan Kulow  <coolo@kde.org>

	* kkfmoptdlg.cpp: removed the delete statements completly.
	the parent (tabdlg) already deletes them

	* root.cpp: added a decodeURL for the desktop entries
